--- a/bio/biografia.html
+++ b/bio/biografia.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto web e mobile</title>
-
-    <ol>
-        <li> <a href="bio/biografia.html">Biografia</a></li>
-    </ol>
-
-
+    <title>Biografia - Rodrigo Manzella</title>
 </head>
 <body>
+    <p>Teste</p>
     
 </body>
 </html>
