--- a/bio/biografia.html
+++ b/bio/biografia.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Biografia - Rodrigo Manzella</title>
 </head>
 <body>
-    <p>Teste</p>
+    <h1>Biografia - Rodrigo teixeira Manzella</h1> <br>
+
+    <div>
+        <p>Tenho 20 anos, nasci e fui e criado em Recife - PE. Estudei até meus 7 anos na escola bem-me-quer
+            e a partir do terceiro ano do ensino fundamental ingressei no Colégio Santa Maria onde estudei até
+            concluir o ensino médio.
+        </p>
+    </div>
+    
+
     
 </body>
 </html>
